life-logger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: life-logger
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
