life-logger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: life-logger
  namespace: life-logger
  labels:
    app: life-logger
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: life-logger
  template:
    metadata:
      labels:
        app: life-logger
    spec:
      imagePullSecrets:
        - name: ghcr-kj800x
      containers:
        - name: life-logger
          image: ghcr.io/kj800x/life-logger-2:commit-1348d4cbe8d7dcdd2af9cd5c27334f1bd40b5e20
          command: ["life-logger-2-rs"]
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          nfs:
            server: 10.60.1.15
            path: /data/services/life-logger
