life-logger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: life-logger
  namespace: life-logger
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ll.home.coolkev.com
spec:
  type: LoadBalancer
  selector:
    app: life-logger
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
