life-logger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: life-logger
  namespace: life-logger
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ll.home.coolkev.com
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: ll.home.coolkev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: life-logger
                port:
                  number: 80
